--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,7 @@ services:
         restart: always
         volumes:
             - "./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-            - "./etc/ssl:/etc/ssl"
-            - "./public:/var/www/html/public"
+            - "./:/var/www/html/"
         depends_on:
             - php
     php:
@@ -17,4 +16,4 @@ services:
         restart: always
         volumes:
             - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
-            - "./public:/var/www/html/public"
+            - "./:/var/www/html/"
