--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "league/container": "dev-master"
+    },
     "autoload": {
         "psr-4": {
             "Todo\\": "app"
