--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
             "email": "maris9229@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "beta",
     "require": {
-        "league/container": "dev-master"
+        "league/route": "^3.0"
     },
     "autoload": {
         "psr-4": {
