Add twig library

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "minimum-stability": "beta",
     "require": {
         "league/route": "^3.0",
-        "zendframework/zend-diactoros": "^1.5"
+        "zendframework/zend-diactoros": "^1.5",
+        "twig/twig": "^2.0"
     },
     "autoload": {
         "psr-4": {
